Bug 412895 - Attachment detector should not trigger while saving as draft
Summary: Attachment detector should not trigger while saving as draft
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.12.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-13 05:19 UTC by Kishore Gopalakrishnan
Modified: 2019-10-14 06:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2019-10-13 05:19:44 UTC
SUMMARY
The attachment detector triggers even if one saves as draft, and one has to select the confusingly worded 'send as is' to actually save the draft without attaching a file.

STEPS TO REPRODUCE
1. File > New > New Message
2. Type 'attachment' in the message body
3. You get a blue bar that reminds you to attach a file
4. Click Message > Save as Draft
5. You get a warning box with three options: 'attach file', 'send as is', or 'cancel'.
6. Clicking 'send as is' allows the draft to be saved without attaching a file.

OBSERVED RESULT
One has to click 'send as is' to save the draft, which is a bit confusing for the user. 

EXPECTED RESULT
The attachment detector should only trigger while sending the message, but not while saving as draft.

SOFTWARE/OS VERSIONS
Linux distro: Arch Linux
KDE Plasma Version: 5.16.90
KDE Frameworks Version: 5.62.0
Qt Version: 5.13.1
Comment 1 Laurent Montel 2019-10-13 09:17:48 UTC
Interesting bug. I will investigate soon.
Comment 2 Laurent Montel 2019-10-14 06:55:42 UTC
Git commit 96c0e3ed5a01a41264ecb215f1b8bb8b4fee324e by Laurent Montel.
Committed on 14/10/2019 at 06:55.
Pushed by mlaurent into branch 'Applications/19.08'.

Fix Bug 412895 - Attachment detector should not trigger while saving as draft

FIXED-IN: 5.12.3

M  +6    -4    src/editor/kmcomposerwin.cpp

https://commits.kde.org/kmail/96c0e3ed5a01a41264ecb215f1b8bb8b4fee324e