Fix Bug 412895 - Attachment detector should not trigger while saving as draft

FIXED-IN: 5.12.3
BUG: 412895