src/editor/kmcomposerwin.cpp
@@ -2497,10 +2497,12 @@ void KMComposerWin::printComposeResult(KJob *job, bool preview)
 
 void KMComposerWin::doSend(MessageComposer::MessageSender::SendMethod method, MessageComposer::MessageSender::SaveIn saveIn, bool willSendItWithoutReediting)
 {
-    const MessageComposer::ComposerViewBase::MissingAttachment forgotAttachment = userForgotAttachment();
-    if ((forgotAttachment == MessageComposer::ComposerViewBase::FoundMissingAttachmentAndAddedAttachment)
-        || (forgotAttachment == MessageComposer::ComposerViewBase::FoundMissingAttachmentAndCancel)) {
-        return;
+    if(saveIn == MessageComposer::MessageSender::SaveInNone) {
+        const MessageComposer::ComposerViewBase::MissingAttachment forgotAttachment = userForgotAttachment();
+        if ((forgotAttachment == MessageComposer::ComposerViewBase::FoundMissingAttachmentAndAddedAttachment)
+                || (forgotAttachment == MessageComposer::ComposerViewBase::FoundMissingAttachmentAndCancel)) {
+            return;
+        }
     }
 
     //TODO generate new message from plugins.
